[Bug #20478] No error/warning for circular argument reference

This warning was originally introduced at [Bug #10314], because Rails
had used it as vcall (private form method call with no argument).
Probably nobody uses it as vcall nowaday.